--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.steffenjacobs.effectivemusic.frontend</groupId>
 	<artifactId>gwt-boot</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>war</packaging>
-	<name>Ekito Spring Boot GWT WebApp</name>
+	<name>EffectiveMusic</name>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
