--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<!-- POM -->
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.steffenjacobs.effectivemusic.frontend</groupId>
-	<artifactId>gwt-boot</artifactId>
+	<artifactId>EffectiveMusic</artifactId>
 	<version>1.0.0</version>
 	<packaging>war</packaging>
 	<name>EffectiveMusic</name>
