improved layouting of ControlPanel and PlaylistPanel

--- a/src/main/resources/me/steffenjacobs/effectivemusic/frontend/client/resource/EffectiveMusicMessages.properties
+++ b/src/main/resources/me/steffenjacobs/effectivemusic/frontend/client/resource/EffectiveMusicMessages.properties
@@ -6,3 +6,6 @@ startButton = \u25B6
 pauseButton = \u23F8
 nextButton = \u25B6\u25B6
 previousButton = \u25C0\u25C0
+
+volume = Volume:
+position = Position:
