--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
   <servlet>
-    <servlet-name>gwt-boot</servlet-name>
+    <servlet-name>effectivemusic</servlet-name>
     <servlet-class>
         org.springframework.web.servlet.DispatcherServlet
     </servlet-class>
@@ -19,7 +19,7 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
   </servlet>
   
   <servlet-mapping>
-    <servlet-name>gwt-boot</servlet-name>
+    <servlet-name>effectivemusic</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
